@@ -14,21 +14,27 @@
  * You should have received a copy of the GNU General Public License
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  ******************************************************************************/
-//
-// This file was generated by the JavaTM Architecture for XML Binding(JAXB) Reference Implementation, vJAXB 2.1.3 in JDK 1.6 
-// See <a href="http://java.sun.com/xml/jaxb">http://java.sun.com/xml/jaxb</a> 
-// Any modifications to this file will be lost upon recompilation of the source schema. 
-// Generated on: 2009.08.04 at 03:45:03 PM MESZ 
-//
-
-@javax.xml.bind.annotation.XmlSchema(namespace = "http://www.topografix.com/GPX/1/1", elementFormDefault = javax.xml.bind.annotation.XmlNsForm.QUALIFIED)
-@XmlJavaTypeAdapters({ @XmlJavaTypeAdapter(value = BigDecimalAdapter.class, type = BigDecimal.class) })
-package mobac.data.gpx.gpx11;
+package mobac.program.jaxb;
 
 import java.math.BigDecimal;
+import java.text.DecimalFormat;
+import java.text.DecimalFormatSymbols;
+import java.text.NumberFormat;
+import java.util.Locale;
 
-import javax.xml.bind.annotation.adapters.XmlJavaTypeAdapter;
-import javax.xml.bind.annotation.adapters.XmlJavaTypeAdapters;
+import javax.xml.bind.annotation.adapters.XmlAdapter;
 
-import mobac.program.jaxb.BigDecimalAdapter;
+public class BigDecimalAdapter extends XmlAdapter<String, BigDecimal> {
 
+	NumberFormat df = new DecimalFormat("0.00000",DecimalFormatSymbols.getInstance(Locale.ENGLISH));
+
+	@Override
+	public BigDecimal unmarshal(String v) throws Exception {
+		return new BigDecimal(v);
+	}
+
+	@Override
+	public String marshal(BigDecimal v) throws Exception {
+		return df.format(v);
+	}
+}
